# tree-2-file

./: .pdm-python  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/tree_2_file/: __init__.py  cli.py  main.py  tree_2_file.py
tests/: __init__.py  test_tree_2_file.py
