[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree_2_file"
version = "0.1.0"
description = "Take text representing a directory tree and create the directories and files on the actual filesystem"
readme = "README.rst"
authors = [
  {name = "Reed Jones", email = "reedmjones@outlook.com"}
]
maintainers = [
  {name = "Reed Jones", email = "reedmjones@outlook.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Education :: Testing"
]
license = {text = "MIT license"}
dependencies = [
  "pyperclip>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/reedjones/tree_2_file/issues"
changelog = "https://github.com/reedjones/tree_2_file/blob/master/changelog.md"
homepage = "https://github.com/reedjones/tree_2_file"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

